--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Nations Capital Bullies</title>
+    <title>Nations Capital Bullies-</title>
     <link href="logo1.png" type="image" rel="icon">
     
     <!-- Bootstrap Core CSS -->
