changed sizes of portfolio-items, to fix layout

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
                         <p class="text-muted">Click on the image to see more of our adult dog photos</p>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
