--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Nations Capital Bullies-</title>
+    <title>Nations Capital Bullies</title>
     <link href="logo1.png" type="image" rel="icon">
     
     <!-- Bootstrap Core CSS -->
@@ -302,13 +302,13 @@
                     <div class="team-member">
                         <img src="moegyles.jpg" class="img-responsive img-circle" alt="">
                         <h4>Moe Gyles</h4>
-                        <p class="text-muted">Lead Designer</p>
+                    <!--  <p class="text-muted">Lead Designer</p>-->
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                           <!-- <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a>-->
                             </li>
                         </ul>
                     </div>
@@ -318,13 +318,13 @@
                     <div class="team-member">
                         <img src="melvinflemming.jpg" class="img-responsive img-circle" alt="">
                         <h4>Melving Flemming</h4>
-                        <p class="text-muted">Lead Marketer</p>
+                      <!-- <p class="text-muted">Lead Marketer</p>-->
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                         <!--   <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>-->
+                            <li><a href="https://www.facebook.com/melvin.fleming.3"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.instagram.com/nationscaptialbulliesdc/?hl=en"><i class="fa fa-instagram"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -333,15 +333,15 @@
                 <div class="col-sm-2">
                     <div class="team-member">
                         <img src="davidhickerson.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Davind Hickerson</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <h4>Davind Hickson</h4>
+                     <!--<p class="text-muted">Lead Developer</p>
+                     -->   <ul class="list-inline social-buttons">
+                        <!--    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>-->
+                            <li><a href="https://www.facebook.com/david.s.hickson"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
+                           <!-- <li><a href="#"><i class="fa fa-instagram"></i></a>
+                            </li>-->
                         </ul>
                     </div>
                 </div>
@@ -350,13 +350,13 @@
                     <div class="team-member">
                         <img src="jamalbullock.jpg" class="img-responsive img-circle" alt="">
                         <h4>Jamal Bullock</h4>
-                        <p class="text-muted">Lead Developer</p>
+                   <!--  <p class="text-muted">Lead Developer</p>-->
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                          <!--  <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>-->
+                            <li><a href="https://www.instagram.com/nationscapitalbullies/?hl=en"><i class="fa fa-instagram"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -375,7 +375,7 @@
                     <h3 class="section-subheading text-muted">Thank you for taking the time and visiting the Nations Capital Bullies website. If you have any questions regarding prices and deposits, please feel free to fill out the form below. We will be in touch with you as soon as we can. Thank you!</h3>
                 </div>
             </div>
-            <div class="row">
+         <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
